--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 # Site/SEO settings
-email: 
+email:
 permalink: /:year/:month/:day/:title/
-google_analytics: 
+google_analytics:
 
-title: Trophy
-description: 
-url: ""
+title: Anti-Rent War Revival
+description:
+url: "/antirentwarrevival"
 baseurl: ""
-twitter_username: 
-default_img: 
+twitter_username:
+default_img: "https://upload.wikimedia.org/wikipedia/commons/e/e6/Anti-Rent_Poster.jpg"
 
 # Profile settings
-name: 
-profile_img: 
-profile: 
+name:
+profile_img:
+profile:
 social:
-  github: 
+  github:
 
 # Build settings
 markdown: kramdown
