committing my jekyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ google_analytics:
 
 title: Anti-Rent War Revival
 description:
-url: "/antirentwarrevival"
-baseurl: ""
+url: "cerees.github.io"
+baseurl: "/anti_rent_revival"
 twitter_username:
 default_img: "https://upload.wikimedia.org/wikipedia/commons/e/e6/Anti-Rent_Poster.jpg"
 
